--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ main {
     width: var(--card-width);
     height: calc(var(--card-width) / 1.75);
     border: 1px solid #333;
+
+    transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
 }
 
 @media (max-width: 32rem) {
